--- a/backend.yaml
+++ b/backend.yaml
@@ -10,7 +10,7 @@
 
   - name: install nodejs
     ansible.builtin.package:
-      name: "{{ item }}"
+      name: nodejs
       state: present
   
   - name: create expense user
