--- a/backend.yaml
+++ b/backend.yaml
@@ -44,7 +44,14 @@
   - name: copy backend service
     ansible.builtin.copy:
       src: backend.service
-      dest: /etc/systemd/system/backend.service    
+      dest: /etc/systemd/system/backend.service 
+
+  - name: ansible to install pymysql
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      - cryptography
+      executable: pip3.9       
 
   - name: import mysql data
     community.mysql.mysql_db:
