--- a/backend.yaml
+++ b/backend.yaml
@@ -63,4 +63,5 @@
       login_host: "{{ login_host }}"
       target: /app/schema/backend.sql
       name: all
-      state: dump   
+      state: import   
+
